--- a/layouts/partials/social-follow.html
+++ b/layouts/partials/social-follow.html
@@ -8,7 +8,8 @@
       {{ else }}
         {{ .label }}
       {{ end }}
-      {{- partial "new-window-icon.html" . -}}
+      {{/*Tom: Remove links symbol*/}}
+      {{/*- partial "new-window-icon.html" . -*/}}
     </a>
   {{ end }}
 </div>
