Removed social links parts on header navigation

--- a/layouts/partials/site-navigation.html
+++ b/layouts/partials/site-navigation.html
@@ -20,7 +20,8 @@
           {{ end }}
         </ul>
       {{ end }}
-      {{ partialCached "social-follow.html" . }}
+      {{/*Tom: Removed social links parts on header navigation*/}}
+      {{/* partialCached "social-follow.html" . */}}
     </div>
   </div>
 </nav>
